--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <script type="text/javascript" src="/static/p5.min.js"></script>
-    <script type="text/javascript" src="/static/p5.dom.js"></script>
+    <script type="text/javascript" src="static/p5.min.js"></script>
+    <script type="text/javascript" src="static/p5.dom.js"></script>
     <title>FFL Blog Post - NN's</title>
 </head>
 <body>
     <div id="processing">
     </div>
-    <script type="text/javascript" src="/static/NN_viz.js"></script>
+    <script type="text/javascript" src="static/NN_viz.js"></script>
 </body>
 </html>
 
