--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <script type="text/javascript" src="static/p5.min.js"></script>
     <script type="text/javascript" src="static/p5.dom.js"></script>
+    <link href="http://d2v52k3cl9vedd.cloudfront.net/basscss/7.0.4/basscss.min.css" rel="stylesheet">
     <title>FFL Blog Post - NN's</title>
 </head>
 <body>
